# layer-norm-vs

./: CMakeLists.txt  layer-norm-new.sln  layer-norm.sln
layer-norm/: CMakeLists.txt  device_tensor.cuh  host_tensor.cpp  layer-norm.vcxproj  main.cpp  utils.cuh
layer-norm-new/: device_patterns.cuh  device_tensor.cpp  gpu_timer.cuh  host_tensor.cpp  host_tensor.cuh  layer-norm-new.vcxproj  layer-norm-new.vcxproj.filters  main.cpp  tensor.cuh
